changement de palette

--- a/header/index.css
+++ b/header/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #6D2323; /* Appliquer la couleur de fond ici */
+    background-color: #E5D0AC; /* Appliquer la couleur de fond ici */
     font-family: "Montserrat", sans-serif;
     color: white; /* Assurer que le texte est bien blanc */
 }
