correction du index

--- a/all/index.css
+++ b/all/index.css
@@ -54,6 +54,37 @@ main {
     padding: 50px 20px;
 }
 
+.feature__container {
+    display: grid;
+    gap: 1rem;
+  }
+  
+  .feature__card {
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background-color: var(--white);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+  }
+  
+  .feature__card img {
+    max-width: 70px;
+  }
+  
+  .feature__card h4 {
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--text-dark);
+  }
+  
+  .feature__card p {
+    color: var(--text-light);
+    line-height: 1.5rem;
+  }
+
+
 footer {
     text-align: center;
     padding: 20px;
