--- a/all/explorer.css
+++ b/all/explorer.css
@@ -12,7 +12,7 @@ body {
   min-height: 100vh;  /* Assure que le body prend toute la hauteur de la page */
   background-color: white; 
   font-family: "Montserrat", sans-serif;
-  color: white; /* Assurer que le texte est bien blanc */
+  color:black; /* Assurer que le texte est bien blanc */
 }
 
 header {
@@ -113,18 +113,11 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 
   }
   
   
  
-
-
-
-
-
-
 
   .top-destinations {
     text-align: center;
