--- a/all/sinscrire.css
+++ b/all/sinscrire.css
@@ -54,13 +54,14 @@ header {
 
 /* Styles du formulaire d'inscription */
 .signup-main-container {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-image: url("loginimages/background.jpg");
     background-size: cover;
     background-position: center;
+    padding: 2rem 0;
 }
 
 .signup-inner-container {
@@ -72,6 +73,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .signup-inner-container h2 {
@@ -117,6 +119,7 @@ p.info-text {
     cursor: pointer;
     width: 100%;
     transition: background-color 0.3s ease;
+    margin-top: 1rem;
 }
 
 .signup-button:hover {
