--- a/all/sinscrire.css
+++ b/all/sinscrire.css
@@ -20,12 +20,14 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 10%;
-    background-color: #5A1E1E;
+    background-color: linear-gradient(#046ce4,#148aea, #1e99ef);
 }
 
 .logo {
     cursor: pointer;
     width: 120px;
+    background-color :white;
+    border-radius: 10% 30% 50% 70%;
 }
 
 .nav_links {
@@ -130,7 +132,8 @@ p.info-text {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #5A1E1E;
+    background-color: #1e99ef;
+    color:white;
     margin-top: auto;
-    width: 100;
+    width: 100%;
 }
