--- a/all/sinscrire.css
+++ b/all/sinscrire.css
@@ -111,7 +111,7 @@ p.info-text {
 
 /* Bouton d'inscription */
 .signup-button {
-    background-color: #5A1E1E;
+    background-color: #1e99ef;
     color: white;
     border: none;
     border-radius: 8px;
