--- a/all/profil.css
+++ b/all/profil.css
@@ -118,6 +118,7 @@ body {
 .button-container {
     text-align: center;
     margin-top: 30px;
+    padding-bottom: 50px;
 }
 
 .save-button {
@@ -131,6 +132,7 @@ body {
     cursor: pointer;
     padding: 10px 20px;
     transition: background-color 0.3s ease;
+    margin-bottom: 50px;
 }
 
 .save-button:hover {
@@ -143,4 +145,6 @@ footer {
     padding: 20px;
     background-color: #1e99ef;
     color: white;
+    margin-top: auto;
+    width: 100%;
 }
