--- a/all/seconnecter.css
+++ b/all/seconnecter.css
@@ -74,7 +74,7 @@ header {
     flex-direction: column;
     justify-content: center;
     padding: 1rem;
-    color: white;
+    color: black;
   }
   
   .login-col1 h1 {
