--- a/all/sinscrire.css
+++ b/all/sinscrire.css
@@ -123,6 +123,27 @@ p.info-text {
     text-align: center;
 }
 
+
+/* Conteneur des cases à cocher */
+.checkbox-container {
+    display: flex;
+    align-items: flex-start;
+    margin: 15px 0;
+    font-size: 0.9rem;
+    color: #333;
+    max-width: 90%;
+}
+
+/* Style des checkboxes */
+.checkbox-container input {
+    margin-right: 10px;
+    transform: scale(1.2); /* Agrandit légèrement la case à cocher */
+    cursor: pointer;
+}
+
+
+
+
 /* Bouton d'inscription */
 .signup-button {
     background-color: #1e99ef;
